--- a/Vecteur_Longueur/nmake/Makefile
+++ b/Vecteur_Longueur/nmake/Makefile
@@ -9,13 +9,13 @@ GINCS =\
     
 GOBJS =\
     $(GBUILD)/main.obj \
-    $(GBUILD)/GVec2D.obj
+    $(GBUILD)/GVec.obj
     
 all: $(GOBJS)
 	link /OUT:$(GTARGET) $(GOBJS)
 $(GBUILD)/main.obj: $(GSRC)/main.cpp
 	cl /c /EHsc $(GSRC)/main.cpp /Fo$(GBUILD)/main.obj $(GINCS)
-$(GBUILD)/GVec2D.obj: $(GPATH)/Vecteur/src/manager/GVec2D.cpp
-	cl /c /EHsc $(GPATH)/Vecteur/src/manager/GVec2D.cpp /Fo$(GBUILD)/GVec2D.obj
+$(GBUILD)/GVec.obj: $(GPATH)/Vecteur/src/manager/GVec.cpp
+	cl /c /EHsc $(GPATH)/Vecteur/src/manager/GVec.cpp /Fo$(GBUILD)/GVec.obj
 clean:
 	del /Q $(GBUILD)\* $(GBIN)\*
