--- a/Vecteur_Normal/nmake/Makefile
+++ b/Vecteur_Normal/nmake/Makefile
@@ -1,11 +1,11 @@
-GPATH = ../../
+GPATH = ../..
 GSRC = ../src
 GBIN = bin
 GBUILD = build
 GTARGET = $(GBIN)/GProject.exe
 
 GINCS =\
-    /I$(GPATH)/Vecteur/src/manager
+    /I$(GPATH)/lib
     
 GOBJS =\
     $(GBUILD)/main.obj \
@@ -15,7 +15,7 @@ all: $(GOBJS)
 	link /OUT:$(GTARGET) $(GOBJS)
 $(GBUILD)/main.obj: $(GSRC)/main.cpp
 	cl /c /EHsc $(GSRC)/main.cpp /Fo$(GBUILD)/main.obj $(GINCS)
-$(GBUILD)/GVec.obj: $(GPATH)/Vecteur/src/manager/GVec.cpp
-	cl /c /EHsc $(GPATH)/Vecteur/src/manager/GVec.cpp /Fo$(GBUILD)/GVec.obj
+$(GBUILD)/GVec.obj: $(GPATH)/lib/GVec.cpp
+	cl /c /EHsc $(GPATH)/lib/GVec.cpp /Fo$(GBUILD)/GVec.obj
 clean:
 	del /Q $(GBUILD)\* $(GBIN)\*
