--- a/Droite/nmake/Makefile
+++ b/Droite/nmake/Makefile
@@ -10,7 +10,8 @@ GINCS =\
 GOBJS =\
     $(GBUILD)/main.obj \
     $(GBUILD)/GVec.obj \
-    $(GBUILD)/GGlobal.obj
+    $(GBUILD)/GPoint.obj \
+    $(GBUILD)/GLine.obj
     
 all: $(GOBJS)
 	link /OUT:$(GTARGET) $(GOBJS)
@@ -18,7 +19,9 @@ $(GBUILD)/main.obj: $(GSRC)/main.cpp
 	cl /c /EHsc $(GSRC)/main.cpp /Fo$(GBUILD)/main.obj $(GINCS)
 $(GBUILD)/GVec.obj: $(GPATH)/lib/GVec.cpp
 	cl /c /EHsc $(GPATH)/lib/GVec.cpp /Fo$(GBUILD)/GVec.obj 
-$(GBUILD)/GGlobal.obj: $(GPATH)/lib/GGlobal.cpp
-	cl /c /EHsc $(GPATH)/lib/GGlobal.cpp /Fo$(GBUILD)/GGlobal.obj 
+$(GBUILD)/GPoint.obj: $(GPATH)/lib/GPoint.cpp
+	cl /c /EHsc $(GPATH)/lib/GPoint.cpp /Fo$(GBUILD)/GPoint.obj 
+$(GBUILD)/GLine.obj: $(GPATH)/lib/GLine.cpp
+	cl /c /EHsc $(GPATH)/lib/GLine.cpp /Fo$(GBUILD)/GLine.obj 
 clean:
 	del /Q $(GBUILD)\* $(GBIN)\*
