--- a/Vecteur_Produit_Scaliare/nmake/Makefile
+++ b/Vecteur_Produit_Scaliare/nmake/Makefile
@@ -9,8 +9,7 @@ GINCS =\
     
 GOBJS =\
     $(GBUILD)/main.obj \
-    $(GBUILD)/GVec.obj \
-    $(GBUILD)/GGlobal.obj
+    $(GBUILD)/GVec.obj
     
 all: $(GOBJS)
 	link /OUT:$(GTARGET) $(GOBJS)
@@ -18,7 +17,5 @@ $(GBUILD)/main.obj: $(GSRC)/main.cpp
 	cl /c /EHsc $(GSRC)/main.cpp /Fo$(GBUILD)/main.obj $(GINCS)
 $(GBUILD)/GVec.obj: $(GPATH)/lib/GVec.cpp
 	cl /c /EHsc $(GPATH)/lib/GVec.cpp /Fo$(GBUILD)/GVec.obj 
-$(GBUILD)/GGlobal.obj: $(GPATH)/lib/GGlobal.cpp
-	cl /c /EHsc $(GPATH)/lib/GGlobal.cpp /Fo$(GBUILD)/GGlobal.obj 
 clean:
 	del /Q $(GBUILD)\* $(GBIN)\*
