--- a/Matrice_Passage/nmake/Makefile
+++ b/Matrice_Passage/nmake/Makefile
@@ -10,6 +10,7 @@ GINCS =\
 GOBJS =\
     $(GBUILD)/main.obj \
     $(GBUILD)/GMat.obj \
+    $(GBUILD)/GVec.obj \
     $(GBUILD)/GMatPass.obj
     
 all: $(GOBJS)
@@ -18,6 +19,8 @@ $(GBUILD)/main.obj: $(GSRC)/main.cpp
 	cl /c /EHsc $(GSRC)/main.cpp /Fo$(GBUILD)/main.obj $(GINCS)
 $(GBUILD)/GMat.obj: $(GPATH)/lib/GMat.cpp
 	cl /c /EHsc $(GPATH)/lib/GMat.cpp /Fo$(GBUILD)/GMat.obj 
+$(GBUILD)/GVec.obj: $(GPATH)/lib/GVec.cpp
+	cl /c /EHsc $(GPATH)/lib/GVec.cpp /Fo$(GBUILD)/GVec.obj 
 $(GBUILD)/GMatPass.obj: $(GPATH)/lib/GMatPass.cpp
 	cl /c /EHsc $(GPATH)/lib/GMatPass.cpp /Fo$(GBUILD)/GMatPass.obj 
 clean:
